[gd_scene load_steps=6 format=3 uid="uid://do0hb36pk5rf"]

[ext_resource type="Script" uid="uid://d0w1wqae2r5u0" path="res://scripts/room.gd" id="1_87mtg"]
[ext_resource type="Texture2D" uid="uid://njhsefggttdb" path="res://assets/tileset.png" id="1_n0vdj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0110b"]
texture = ExtResource("1_n0vdj")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 4, -8, 4, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0, -8, 0, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -8, 8, -8, 8, 8, 0, 8, 0, 0)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4, -8, -4, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4, -8, -4, 4, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 4, -8, 4, 4, 8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4, -4, -4, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 4, -4, 4, 8, 8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4, -8, -4, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_csm2d"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0110b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x70ip"]
size = Vector2(252, 140)

[node name="room" type="Node2D"]
script = ExtResource("1_87mtg")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_csm2d")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 15, 262144, 0, 524303, 262144, 4, 524288, 0, 4, 1, 65536, 4, 2, 65536, 4, 3, 65536, 4, 4, 65536, 4, 14, 65536, 4, 13, 65536, 4, 12, 65536, 4, 11, 65536, 4, 10, 65536, 4, 5, 65536, 4, 6, 65536, 4, 9, 65536, 4, 524294, 65536, 4, 524293, 65536, 4, 524292, 65536, 4, 524291, 65536, 4, 524290, 65536, 4, 524289, 65536, 4, 524297, 65536, 4, 524298, 65536, 4, 524299, 65536, 4, 524300, 65536, 4, 524301, 65536, 4, 524302, 65536, 4, 524295, 327680, 0, 7, 327680, 0, 524296, 393216, 0, 8, 393216, 0, 65536, 0, 1, 131072, 0, 1, 393216, 0, 1, 458752, 0, 1, 196608, 0, 1, 327680, 0, 1, 458767, 262144, 1, 393231, 262144, 1, 327695, 262144, 1, 196623, 262144, 1, 131087, 262144, 1, 65551, 262144, 1, 262144, 0, 2, 262159, 262144, 2, 262151, 65536, 3, 196615, 65536, 3, 131079, 65536, 3, 65543, 196608, 1, 65542, 196608, 1, 65541, 196608, 1, 65540, 196608, 1, 65539, 196608, 1, 65538, 196608, 1, 65537, 196608, 1, 131073, 196608, 1, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 65536, 3, 458753, 196608, 1, 458754, 196608, 1, 393218, 65536, 3, 327682, 65536, 3, 262146, 196608, 1, 196610, 196608, 1, 131074, 196608, 1, 131075, 65536, 3, 196611, 196608, 1, 262147, 65536, 3, 327683, 65536, 3, 393219, 65536, 3, 458755, 196608, 1, 458756, 196608, 1, 393220, 196608, 1, 327684, 196608, 1, 262148, 65536, 3, 196612, 65536, 3, 131076, 65536, 3, 131077, 65536, 3, 196613, 65536, 3, 262149, 196608, 1, 327685, 196608, 1, 393221, 196608, 1, 458757, 196608, 1, 458758, 196608, 1, 393222, 65536, 3, 327686, 65536, 3, 262150, 196608, 1, 196614, 65536, 3, 131078, 196608, 1, 327687, 65536, 3, 393223, 65536, 3, 458759, 196608, 1, 458760, 65536, 3, 393224, 65536, 3, 327688, 196608, 1, 262152, 65536, 3, 196616, 196608, 1, 131080, 196608, 1, 65544, 196608, 1, 65545, 196608, 1, 131081, 65536, 3, 196617, 196608, 1, 262153, 196608, 1, 327689, 196608, 1, 393225, 196608, 1, 458761, 196608, 1, 458762, 196608, 1, 393226, 196608, 1, 327690, 196608, 1, 262154, 196608, 1, 196618, 196608, 1, 131082, 196608, 1, 65546, 196608, 1, 65547, 65536, 3, 131083, 65536, 3, 196619, 196608, 1, 262155, 65536, 3, 327691, 196608, 1, 393227, 65536, 3, 458763, 196608, 1, 458764, 196608, 1, 393228, 65536, 3, 327692, 65536, 3, 262156, 65536, 3, 196620, 196608, 1, 131084, 196608, 1, 65548, 196608, 1, 65549, 196608, 1, 131085, 196608, 1, 196621, 65536, 3, 262157, 196608, 1, 327693, 196608, 1, 393229, 196608, 1, 458765, 65536, 3, 458766, 196608, 1, 393230, 196608, 1, 327694, 65536, 3, 262158, 196608, 1, 196622, 196608, 1, 131086, 196608, 1, 65550, 196608, 1)

[node name="door_up" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_csm2d")
format = 2
layer_0/tile_data = PackedInt32Array(7, 65536, 0, 8, 65536, 0)

[node name="door_right" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_csm2d")
format = 2
layer_0/tile_data = PackedInt32Array(262159, 262144, 1)

[node name="door_down" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_csm2d")
format = 2
layer_0/tile_data = PackedInt32Array(524295, 65536, 0, 524296, 65536, 0)

[node name="door_left" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_csm2d")
format = 2
layer_0/tile_data = PackedInt32Array(262144, 0, 3)

[node name="detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
position = Vector2(128, 72)
shape = SubResource("RectangleShape2D_x70ip")
debug_color = Color(0.865542, 0.335361, 0.321483, 0.42)

[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
